--- a/cookus-backend/requirements.txt
+++ b/cookus-backend/requirements.txt
@@ -1,8 +1,50 @@
+aiosmtplib==2.0.2
+annotated-types==0.7.0
+anyio==4.11.0
+blinker==1.9.0
+certifi==2025.10.5
+cffi==2.0.0
+click==8.3.0
+colorama==0.4.6
+cryptography==46.0.3
+distro==1.9.0
+dnspython==2.8.0
+ecdsa==0.19.1
+email-validator==2.3.0
 fastapi==0.115.0
-uvicorn[standard]==0.34.0
-python-dotenv==1.0.0
-mysql-connector-python==9.2.0
-pydantic==2.10.3
-PyJWT==2.*
-python-jose[cryptography]==3.*
 fastapi-mail==1.4.1
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.7.1
+httpx==0.28.1
+idna==3.11
+Jinja2==3.1.6
+jiter==0.11.1
+MarkupSafe==3.0.3
+mysql-connector-python==9.2.0
+numpy==2.3.4
+openai==2.6.1
+pandas==2.3.3
+pyasn1==0.6.1
+pycparser==2.23
+pydantic==2.10.3
+pydantic-settings==2.11.0
+pydantic_core==2.27.1
+PyJWT==2.10.1
+PyMySQL==1.1.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.0
+python-jose==3.5.0
+pytz==2025.2
+PyYAML==6.0.3
+rsa==4.9.1
+six==1.17.0
+sniffio==1.3.1
+starlette==0.38.6
+tqdm==4.67.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.2
+uvicorn==0.34.0
+watchfiles==1.1.1
+websockets==15.0.1
